force-app/main/default/objects/dfsle__Document__c/dfsle__Document__c.object-meta.xml
<CustomObject>
    <description>DocuSign Envelope Document</description>
    <label>Docusign Envelope Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docusign Envelope Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>