force-app/main/default/objects/dfsle__Document__c/fields/dfsle__FullName__c.field-meta.xml
<CustomField>
    <fullName>dfsle__FullName__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>