force-app/main/default/objects/dfsle__Document__c/fields/dfsle__LastModified__c.field-meta.xml
<CustomField>
    <fullName>dfsle__LastModified__c</fullName>
    <description>Source Last Modified</description>
    <inlineHelpText>Source Last Modified</inlineHelpText>
    <label>Source Last Modified</label>
    <type>DateTime</type>
</CustomField>