force-app/main/default/objects/dfsle__Document__c/fields/dfsle__Type__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Type__c</fullName>
    <description>Document Type</description>
    <inlineHelpText>Document Type</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>